@@ -1,3 +1,6 @@
+[B]Version v2.4.5[/B]
+- Added new turtle version with DM fix.
+
 [B]Version v2.4.4[/B]
 - Disabled Google Analytics by default. Later it settings might be provided.
 
